Fixing dark mode in the home component

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -56,6 +56,7 @@
 }
 
 .dark-mode {
+  color: $white;
   background-color: $main-color-variation;
   box-shadow: $box-shadow-variation;
 
