--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,8 @@
 @import '../../../styles.scss';
 
 .dark-mode {
+  background-color: $main-color-variation;
+
   .footer-container {
     background-color: $main-color;
     color: $white;
