--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -41,6 +41,7 @@
 
 
 .dark-mode {
+  background-color: $main-color-variation;
 
   .banner {
     .banner-content {
